--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 
    <footer>
    <hr>
-    <p>Lester Barahona @ DevChallenges</p>
+    <p>Lester Barahona @ DevChallenges.io</p>
    </footer>
     
   
